# text-adventure

./: .gitignore  CMakeLists.txt  CNAME  README.md  text-adventure  text-adventure.cpp  text_adventure
.github/workflows/: deploy.yml
docs/: architecture.md
src/: dialogues.json  text-adventure.cpp
